# schedule_api

./: .dockerignore  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: lint_and_format.yaml
src/: config.py  main.py
src/schedule_api/: run.py
src/schedule_api/application/: application.py  config.py
src/schedule_api/domain/entities/: __init__.py  group.py  lesson.py  schedule.py
src/schedule_api/domain/interfaces/repositories/: transaction_manager.py
src/schedule_api/infrastructure/db/: __init__.py
src/schedule_api/infrastructure/db/models/: __init__.py  lesson.py  schedule.py
src/schedule_api/infrastructure/di/: ioc.py
src/schedule_api/infrastructure/di/providers/: __init__.py  config.py  db.py
src/shedule_api/: run.py
src/shedule_api/application/: application.py
src/shedule_api/infrastructure/db/: base.py
src/sсhedule_api/: run.py
src/sсhedule_api/application/: application.py
src/sсhedule_api/infrastructure/db/: __init__.py
src/sсhedule_api/infrastructure/db/models/: __init__.py  group.py  lesson.py  schedule.py
src/sсhedule_api/infrastructure/di/: ioc.py
src/sсhedule_api/infrastructure/di/providers/: __init__.py  config.py  db.py
