[project]
name = "schedule-api"
version = "0.1.0"
description = "Schedule API project"
requires-python = ">=3.13"
dependencies = [
    "alembic~=1.16.4",
    "asyncpg~=0.30.0",
    "dishka~=1.6.0",
    "fastapi~=0.116.1",
    "pre-commit~=4.2.0",
    "pydantic-settings",
    "pymarkdownlnt~=0.9.31",
    "python-slugify~=8.0.4",
    "sqlalchemy~=2.0.41",
    "uvicorn~=0.35.0",
    "yamlfix~=1.17.0",
    "yamllint~=1.37.1",
]
